fix: changed gap in footer

--- a/NotAuthorized/style.css
+++ b/NotAuthorized/style.css
@@ -564,6 +564,7 @@ background: #261d18;
         width: 60%;
         height: auto;
         display: flex;
+        gap: 20px;
         justify-content: space-around;
         align-items: center;
         flex-direction: row;
