--- a/NotAuthorized/whoIsTarls.css
+++ b/NotAuthorized/whoIsTarls.css
@@ -170,6 +170,7 @@
       width: 60%;
       height: auto;
       display: flex;
+      gap: 20px;
       justify-content: space-around;
       align-items: center;
       flex-direction: row;
